--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - selenium 
+    - couchdb 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - java -jar /usr/local/selenium/selenium-server-standalone-3.11.0.jar --version
+     - couchdb -V
