--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - sqlite3 
+    - rabbitmq 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - sqlite3 --version
+     - dpkg -s rabbitmq-server | grep Version
