--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - rabbitmq 
+    - neo4j 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - dpkg -s rabbitmq-server | grep Version
+     - /var/lib/neo4j/bin/neo4j version
