--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - elasticsearch 
+    - memcached 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - elasticsearch --version
+     - memcached -V
